--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 							<h2>Resume</h2>
 						</header>
 						<div class="content">
-							<p><strong>Check out my resume </strong> I have experience in operations analysis, systems engineering, and software engineering. My education in Applied Mathematics, at both the undergraduate and graduate levels. I am also a member of Virginia Army National Guard. Most importantly, I am a wife and mom. I'm looking forawrd to getting to know everyone!</p>
+							<p><strong>Check out my resume </strong> Originally, I am from the greater Philadelphia area. I have lived in Pennsylvania, Missouri, Colorado, and now Albemarle County, Virginia. I have experience in operations analysis, systems engineering, and software engineering. My education in Applied Mathematics, at both the undergraduate and graduate levels. I also am familiar and comfortable with Python, R, MatLab, C++, and coding in general-- if you need help, please feel free to shoot me an email below! I am also a member of Virginia Army National Guard. Most importantly, I am a wife and mom. I'm looking forward to getting to know everyone!</p>
 
 							<!-- Section -->
 								<section>
